# wordle-artist

./: Cargo.toml  test.txt
artfiles/: grave.art  house.art  smile.art
src/: main.rs
