[package]
name = "wordle-artist"
version = "0.1.0"
authors = ["Zach Palumbo <zach@palumbo.io>"]
description = "Create pixel art with Wordle."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
rand = "0.8"
clap = { version = "3.0", features = ["derive"] }
